# SekaiManga

./: pyproject.toml
.github/workflows/: manga-auto-update.yml
mangas/: mangas.json
src/: download.py  get_mangas.py
